--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "apiai": "^4.0.2",
     "body-parser": "^1.17.2",
+    "cookie": "^0.3.1",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "mysql": "^2.13.0",
+    "nexmo": "^2.0.2",
     "request": "^2.81.0",
     "uuid": "^3.1.0"
   },
