--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.13.0",
     "nexmo": "^2.0.2",
     "request": "^2.81.0",
+    "socket.io": "^2.0.3",
     "uuid": "^3.1.0"
   },
   "engines": {
