--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "moment": "^2.18.1",
     "mysql": "^2.13.0",
     "nexmo": "^2.0.2",
     "request": "^2.81.0",
