--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "mysql": "^2.13.0",
     "nexmo": "^2.0.2",
     "request": "^2.81.0",
